# Zero2Prod_Axum_Diesel

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Cargo.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/agents/: zero2prod-converter.agent.md
.github/workflows/: audit.yaml  pre-commit.yaml  run_tests.yaml
axum_addendums/: chapter03.md  chapter04.md  diesel_async_tls_and_connection_strategies.md
migrations/2026-04-12-124918-0000_create_subscriptions_table/: down.sql  up.sql
scripts/: init_db.sh  remove_db.sh
src/: configuration.rs  lib.rs  main.rs  schema.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
