[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
authors = ["Shubhendu A Dutta <shubhenduanupam@gmail.com>"]
repository = "https://github.com/shubhenduanupamdutta/Zero2Prod_Axum_Diesel"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.8", features = ["form"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
config = "0.15.22"
diesel = { version = "2.3.7", features = ["chrono", "postgres", "uuid"] }
diesel-async = { version = "0.8.0", features = [
  "deadpool",
  "migrations",
  "postgres"
] }
diesel_migrations = "2.3.1"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.23.0", features = ["v4"] }
